--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "mysql2": "^2.3.3",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.12.0",
     "sequelize": "^5.22.3"
   },
   "devDependencies": {
